--- a/css/style.css
+++ b/css/style.css
@@ -67,3 +67,75 @@ body {
   font-weight: 700;
   font-size: 0.8125rem;
 }
+
+.first-screen {
+  background-image: url("/img/first-screen-bg.png");
+  padding: 10.625rem 23.75rem;
+
+  display: flex;
+  flex-flow: column;
+  gap: 3.4375rem;
+  align-items: flex-start;
+}
+.fs-textblock {
+  display: flex;
+  flex-flow: column;
+  gap: 0.625rem;
+}
+
+.fs-desc {
+  color: var(--dark-brown-color);
+  font-size: 1rem;
+}
+.fs-header {
+  color: var(--dark-brown-color);
+  font-size: 3.125rem;
+}
+
+.ins {
+  text-decoration: underline;
+}
+
+.fs-button {
+  padding: 1.25rem 3.4375rem;
+  background-color: #d37657;
+  color: #fff;
+  font-weight: 700;
+}
+
+.cookware-pieces {
+  padding: 2.8125rem 14.0625rem;
+  display: flex;
+  flex-flow: column;
+  gap: 2.5rem;
+  justify-content: center;
+  background-color: #f5f1e9;
+}
+.cw-desc {
+  text-align: center;
+  font-weight: 700;
+  font-size: 1.5rem;
+  color: var(--dark-brown-color);
+}
+.cw-rec {
+  display: flex;
+  justify-content: space-between;
+}
+
+.place-block {
+  padding: 7.5rem 0;
+  padding-left: 9.375rem;
+  display: flex;
+  gap: 8.4375rem;
+}
+.place-header {
+  color: var(--dark-brown-color);
+  font-weight: 700;
+  font-size: 2.5625rem;
+  text-align: center;
+}
+.place-desc {
+  color: var(--brown-color);
+  font-weight: 400;
+  font-size: 1rem;
+}
